// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Verse block inserts block 1`] = `
"<!-- fin:verse -->
<pre class="fin-block-verse"></pre>
<!-- /fin:verse -->"
`;

exports[`Verse block renders block text set as initial content 1`] = `
"<!-- fin:verse -->
<pre class="fin-block-verse">Sample text</pre>
<!-- /fin:verse -->"
`;
